--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
-name = "rustplayground"
-version = "0.1.0"
 authors = ["k7o <eric.kerst@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
+name = "rustplayground"
+version = "0.1.0"
 [dependencies]
+mocktopus = "*"
