--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(OSX) Launch",
             "type": "lldb",
             "request": "launch",
-            "program": "${workspaceRoot}/target/debug/rustplayground",
+            "program": "${workspaceRoot}/target/debug/client",
             "args": [],
             "cwd": "${workspaceRoot}",
         },
@@ -16,7 +16,7 @@
             "name": "(Windows) Launch",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/target/debug/rustplayground.exe",
+            "program": "${workspaceFolder}/target/debug/client.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
